fix alignment in history

--- a/public/stylesheets/sass/resume.sass
+++ b/public/stylesheets/sass/resume.sass
@@ -190,7 +190,7 @@ section#history
     flex-flow: wrap row
     align-content: flex-end
     jusify-content: space-around
-    align-items: center
+    align-items: flex-start
 
   margin-bottom: 10px
 
@@ -215,10 +215,10 @@ section#history
   p
     margin-bottom: 10px
 
-  .description
-    .pad
-      padding-right: 30px
+  .pad
+    padding-right: 30px
 
+  .description
     .title
       margin-bottom: 10px
       font-size: 18px
